WebAppTesting cyber/WebAppTesting cyber/K8S/testing-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-np-srv
spec:
  type: NodePort
  selector:
    app: webapptesting-cyber
  ports:
    - name: webapptesting-cyber
      protocol: TCP
      port: 80
      targetPort: 80
