WebAppTesting cyber/WebAppTesting cyber/K8S/testingcomplete-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testingcomplete-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testingcompleteservice
  template:
    metadata:
      labels:
        app: testingcompleteservice
    spec:
      containers:
        - name: testingcompleteservice
          image: xl4tir/testingcompleteservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: testingcompleteclusterip-srv
spec:
  type: ClusterIP
  selector:
    app: testingcompleteservice
  ports:
  - name: testingcompleteservice
    protocol: TCP
    port: 80
    targetPort: 80
